--- a/next-hp/package.json
+++ b/next-hp/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^3.0.19"
   },
   "devDependencies": {
     "@types/node": "17.0.16",
