--- a/nextjs-blog-todos/package.json
+++ b/nextjs-blog-todos/package.json
@@ -12,7 +12,9 @@
     "@tailwindcss/forms": "^0.4.0",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.2.1",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
